// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCardList with no files selected renders an empty list 1`] = `
<div
  className="margin-bottom-4"
>
  <ul
    className="usa-list usa-list--unstyled measure-5"
  />
  <ul
    className="usa-list usa-list--unstyled measure-5"
  />
  <label
    className="margin-top-2 usa-button usa-button--outline"
  >
    Choose a document
    <input
      accept="image/*,.pdf"
      className="c-file-card-list__input"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </label>
</div>
`;

exports[`FileCardList with previously-selected files renders a list of the files 1`] = `
<div
  className="margin-bottom-4"
>
  <ul
    className="usa-list usa-list--unstyled measure-5"
  />
  <ul
    className="usa-list usa-list--unstyled measure-5"
  >
    <li
      key="TempFile1"
    >
      <FileCard
        errorMsg={null}
        file={File {}}
        heading="Document 1"
        onRemoveClick={[Function]}
      />
    </li>
  </ul>
  <label
    className="margin-top-2 usa-button usa-button--outline"
  >
    Choose another document
    <input
      accept="image/*,.pdf"
      className="c-file-card-list__input"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
  </label>
</div>
`;
